--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "BookstoreConnection":
-    "host=localhost;port=5432;database=bookstore;username=fisher-user;password=Fl_200217685;pooling=true"
+    "host=amis3610-lefeng.postgres.database.azure.com;port=5432;database=bookstore;username=fisher_user@amis3610-lefeng;password=12345;pooling=true"
   },
   "Logging": {
     "IncludeScopes": false,
